Fixed Last Modified field appearance
Changed server implementation for the last modified field
Updated the UI to use a filter for displaying the field

--- a/war/partials/file-items.html
+++ b/war/partials/file-items.html
@@ -56,7 +56,7 @@
 		</div>
     <div class="media-file-type left">PNG</div>
     <div class="media-file-size left">{{file.sizeString}}</div>
-    <div class="media-date-modified left">{{file.lastModified}}</div>
+    <div class="media-date-modified left">{{file.lastModified | lastModifiedDate}}</div>
     <div class="media-check-box left"><input type="checkbox" class="select-file-checkbox" ng-model="file.checked"></div>
     <div class="clear"></div>
     
