--- a/war/css/media_library.css
+++ b/war/css/media_library.css
@@ -40,6 +40,26 @@ body {
 }
 
 
+/* Close button
+   ========================================================================== */
+
+.close {
+	/* Display & Box Model */
+	line-height: 1.428571429;
+}
+
+
+/* Separate form into sections.
+   ========================================================================== */
+
+.section {
+	/* Display & Box Model */
+	padding-bottom: 20px;
+	padding-top: 20px;
+	border-bottom: 1px solid #efefef;
+}
+
+
 /**********************************************************************************************************************************
 
 	Select / Search presentations.
