--- a/war/css/media-library.css
+++ b/war/css/media-library.css
@@ -1,59 +1,72 @@
 @import "//s3.amazonaws.com/rise-common/styles/rise/css/rise.css";
+
 /* ==========================================================================
    Search Bar & Toggle Buttons
    ========================================================================== */
 .filter {
-  padding: 15px 0; }
+	padding: 15px 0;
+}
 
 /* ==========================================================================
    Buttons
    ========================================================================== */
 .actions {
-  padding-bottom: 15px; }
+	padding-bottom: 15px;
+}
 
 .actions .fa {
-  font-size: 18px; }
-
-.actions .fa-check-circle {
-  font-size: 24px; }
-
-/* TODO: Remove this from rise.css. */
-.btn .fa {
-  padding-left: 0 !important; }
+	font-size: 18px;
+}
 
 .storage {
-  font-size: 10px; }
+	font-size: 10px;
+}
 
 .cloud-download {
-  /* Display & Box Model */
-  padding-left: 10px;
-  /* Visual */
-  font-size: 18px; }
+	/* Display & Box Model */
+	padding-left: 10px;
+
+	/* Visual */
+	font-size: 18px;
+}
 
 /* ==========================================================================
    Thumbnail View
    ========================================================================== */
 /**
- * Single-column layout at phone resolutions.
+ * Single-column layout at mobile resolutions.
  */
 .thumbnails {
-  display: none;
-  cursor: pointer; }
+	display: none;
+	cursor: pointer;
+}
 
 /* Clearfix */
 .thumbnails:after {
-  clear: both;
-  display: block;
-  content: ""; }
+	clear: both;
+	display: block;
+	content: "";
+}
 
 .thumbnail {
-  border: none; }
-
+	border: none;
+}
+	
 .thumbnail .caption {
-  font-size: 12px;
-  text-align: center;
-  text-overflow: ellipsis;
-  overflow: hidden; }
+	font-size: 12px;
+	text-align: center;
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+
+.thumbnail:hover,
+.thumbnail.active {
+	background-color: #f5f5f5;
+}
+
+.thumbnail.active:hover {
+	background-color: #e8e8e8;
+}
 
 /* Media queries
    ========================================================================== */
@@ -61,31 +74,42 @@
  * Three-column layout at tablet resolutions.
  */
 @media (min-width: 768px) {
-  .thumbnail {
-    /* Positioning */
-    float: left;
-    /* Display & Box Model */
-    width: 33.33333333333333%;
-    padding-left: 5px;
-    padding-right: 5px; }
+	.thumbnail {
+		/* Positioning */
+		float: left;
 
-  .thumbnail:nth-child(3n+1) {
-    clear: left; } }
+		/* Display & Box Model */
+		width: 33.33333333333333%;
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+
+	.thumbnail:nth-child(3n+1) {
+		clear: left;
+	}
+}
+
 /**
  * Six-column layout at desktop resolutions.
  */
 @media (min-width: 992px) {
-  .thumbnail {
-    width: 16.66666666666667%; }
+	.thumbnail {
+		width: 16.66666666666667%;
+	}
 
-  .thumbnail:nth-child(3n+1) {
-    clear: none; }
+	.thumbnail:nth-child(3n+1) {
+		clear: none;
+	}
 
-  .thumbnail:nth-child(6n) {
-    padding-right: 0; }
+	.thumbnail:nth-child(6n) {
+		padding-right: 0;
+	}
 
-  .thumbnail:nth-child(6n+1) {
-    /* Positioning */
-    clear: left;
-    /* Display & Box Model */
-    padding-left: 0; } }
+	.thumbnail:nth-child(6n+1) {
+		/* Positioning */
+		clear: left;
+
+		/* Display & Box Model */
+		padding-left: 0;
+	}
+}
