--- a/war/css/media-library.css
+++ b/war/css/media-library.css
@@ -1,34 +1,61 @@
 @import "//s3.amazonaws.com/rise-common/styles/rise/css/rise.css";
+/* ==========================================================================
+   General Styles
+   ========================================================================== */
+ul {
+  /* Display & Box Model */
+  padding: 0;
+  /* Visual */
+  list-style: none; }
 
 /* ==========================================================================
    Search Bar & Toggle Buttons
    ========================================================================== */
 .filter {
-	padding: 15px 0;
-}
+  padding: 15px 0; }
 
 /* ==========================================================================
    Buttons
    ========================================================================== */
-.actions {
-	padding-bottom: 15px;
-}
+.glyphicons:before {
+  /* Display & Box Model */
+  width: 48px;
+  height: 48px;
+  /* Visual */
+  font-size: 18px;
+  font-size: 1.8rem; }
 
-.actions .fa {
-	font-size: 18px;
-}
+.actions {
+  /* Display & Box Model */
+  margin-bottom: 15px;
+  /* Visual */
+  text-align: center; }
+  .actions ul li {
+    /* Positioning */
+    float: left;
+    /* Display & Box Model */
+    width: 48px;
+    height: 48px;
+    margin-right: 10px; }
+    .actions ul li a:hover {
+      background: #f4f4f4; }
+  .actions .glyphicons:before {
+    color: #777;
+    line-height: 48px; }
 
 .storage {
-	font-size: 10px;
-}
+  font-size: 10px;
+  text-align: right; }
+  .storage ul li {
+    float: right; }
+  .storage .glyphicons:before {
+    color: #2d71c3; }
 
-.cloud-download {
-	/* Display & Box Model */
-	padding-left: 10px;
-
-	/* Visual */
-	font-size: 18px;
-}
+.actions a,
+.storage a {
+  display: block;
+  width: 48px;
+  height: 48px; }
 
 /* ==========================================================================
    Thumbnail View
@@ -37,36 +64,29 @@
  * Single-column layout at mobile resolutions.
  */
 .thumbnails {
-	display: none;
-	cursor: pointer;
-}
+  display: none;
+  cursor: pointer; }
 
 /* Clearfix */
 .thumbnails:after {
-	clear: both;
-	display: block;
-	content: "";
-}
+  clear: both;
+  display: block;
+  content: ""; }
 
 .thumbnail {
-	border: none;
-}
-	
-.thumbnail .caption {
-	font-size: 12px;
-	text-align: center;
-	text-overflow: ellipsis;
-	overflow: hidden;
-}
+  border: none; }
+  .thumbnail .caption {
+    font-size: 12px;
+    text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden; }
 
 .thumbnail:hover,
 .thumbnail.active {
-	background-color: #f5f5f5;
-}
+  background-color: #f5f5f5; }
 
 .thumbnail.active:hover {
-	background-color: #e8e8e8;
-}
+  background-color: #e8e8e8; }
 
 /* Media queries
    ========================================================================== */
@@ -74,42 +94,31 @@
  * Three-column layout at tablet resolutions.
  */
 @media (min-width: 768px) {
-	.thumbnail {
-		/* Positioning */
-		float: left;
+  .thumbnail {
+    /* Positioning */
+    float: left;
+    /* Display & Box Model */
+    width: 33.33333333333333%;
+    padding-left: 5px;
+    padding-right: 5px; }
 
-		/* Display & Box Model */
-		width: 33.33333333333333%;
-		padding-left: 5px;
-		padding-right: 5px;
-	}
-
-	.thumbnail:nth-child(3n+1) {
-		clear: left;
-	}
-}
-
+  .thumbnail:nth-child(3n+1) {
+    clear: left; } }
 /**
  * Six-column layout at desktop resolutions.
  */
 @media (min-width: 992px) {
-	.thumbnail {
-		width: 16.66666666666667%;
-	}
+  .thumbnail {
+    width: 16.66666666666667%; }
 
-	.thumbnail:nth-child(3n+1) {
-		clear: none;
-	}
+  .thumbnail:nth-child(3n+1) {
+    clear: none; }
 
-	.thumbnail:nth-child(6n) {
-		padding-right: 0;
-	}
+  .thumbnail:nth-child(6n) {
+    padding-right: 0; }
 
-	.thumbnail:nth-child(6n+1) {
-		/* Positioning */
-		clear: left;
-
-		/* Display & Box Model */
-		padding-left: 0;
-	}
-}
+  .thumbnail:nth-child(6n+1) {
+    /* Positioning */
+    clear: left;
+    /* Display & Box Model */
+    padding-left: 0; } }
