--- a/war/scss/media-library.scss
+++ b/war/scss/media-library.scss
@@ -21,65 +21,64 @@ ul {
 /* ==========================================================================
    Buttons
    ========================================================================== */
-.glyphicons:before {
-	/* Display & Box Model */
-	width: 48px;
-	height: 48px;
+.actions > li {
+	display: inline-block;
 
-	/* Visual */
-	font-size: 18px;
-	font-size: 1.8rem;
-}
+	a {
+		/* Display & Box Model */
+		display: block;
+		padding: 3px 10px;
+		border: #fff solid 1px;
 
-.actions {
-	/* Display & Box Model */
-	margin-bottom: 15px;
+		/* Visual */
+		font-size: 23px;
+		line-height: 30px;
+	}
 
-	/* Visual */
-	text-align: center;
+	a:hover {
+		/* Display & Box Model */
+		border: #e5e5e5 solid 1px;
 
-	ul {
-		li {
-			/* Positioning */
-			float: left;
+		/* Visual */
+		background-color: #f4f4f4;
 
-			/* Display & Box Model */
-			width: 48px;
-			height: 48px;
-			margin-right: 10px;
-
-			a:hover {
-				background: #f4f4f4;
-			}
+		i:before {
+			color: #383838;
 		}
 	}
+}
 
-	.glyphicons:before {
-		color: #777;
-		line-height: 48px;
-	}
+.glyphicons {
+	padding-left: 0;
+}
+
+.glyphicons:before {
+	/* Positioning */
+	position: relative;
+	top: -3px;
+
+	/* Display & Box Model */
+	margin: 0;
+	
+	/* Visual */
+	color: #777;
 }
 
 .storage {
 	font-size: 10px;
 	text-align: right;
 
-	ul {
-		li {
-			float: right;
-		}
+	> li {
+		float: right;
+	}
+
+	.glyphicons {
+		padding-left: 5px;
 	}
 
 	.glyphicons:before {
 		color: #2d71c3;
 	}
-}
-
-.actions a,
-.storage a {
-	display: block;
-	width: 48px;
-	height: 48px;
 }
 
 /* ==========================================================================
