--- a/war/partials/file-items.html
+++ b/war/partials/file-items.html
@@ -1,6 +1,6 @@
 <!-- Thumbnail View -->
 <div id="thumbnails" class="thumbnails">
-	<div class="thumbnail" ng-repeat="file in mediaFiles | filter:query | orderBy:orderByAttribute:reverseSort">
+	<div class="thumbnail" ng-repeat="file in mediaFiles | filter:query | orderBy:orderByAttribute:reverseSort" ng-class="{active: file.checked}">
 		<a href="#" ng-click="$emit('FileSelectAction', file)">
 			<img src="../images/presentation_thumb.jpg" width="120" height="80">
 		</a>
@@ -66,7 +66,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="file in mediaFiles | filter:query | orderBy:orderByAttribute:reverseSort">
+			<tr ng-repeat="file in mediaFiles | filter:query | orderBy:orderByAttribute:reverseSort" ng-class="{active: file.checked}">
 				<td class="text-center">
 					<input type="checkbox" ng-model="file.checked">
 				</td>
