--- a/war/scss/media-library.scss
+++ b/war/scss/media-library.scss
@@ -15,12 +15,16 @@ ul {
    Search Bar & Toggle Buttons
    ========================================================================== */
 .filter {
-	padding: 15px 0;
+	padding: 10px 0;
 }
 
 /* ==========================================================================
    Buttons
    ========================================================================== */
+.commands {
+	position: relative;
+}
+
 .actions > li {
 	display: inline-block;
 
@@ -32,6 +36,7 @@ ul {
 
 		/* Visual */
 		font-size: 23px;
+		border-radius: 0;
 		background-color: transparent;
 	}
 
@@ -65,20 +70,17 @@ ul {
 }
 
 .storage {
+	/* Positioning */
+	position: absolute;
+	bottom: 0;
+	right: 0;
+
+	/* Display & Box Model */
+	margin-bottom: 10px;
+
+	/* Visual */
 	font-size: 10px;
 	text-align: right;
-
-	> li {
-		float: right;
-	}
-
-	.glyphicons {
-		padding-left: 5px;
-	}
-
-	.glyphicons:before {
-		color: #2d71c3;
-	}
 }
 
 /* ==========================================================================
