Moved the upload form within the UploadController

--- a/war/partials/main.html
+++ b/war/partials/main.html
@@ -79,6 +79,22 @@
 			<span ng-show="uploadComplete">Complete</span>
 			<span ng-show="uploadError">Error</span>
 		</div>
+		
+		<div class="modal fade" tabindex="-1">
+			<form id="uploadform" target="uploadcompleteframe" action="" enctype="multipart/form-data" method="post">
+				<input type="hidden" name="key" ng-value="uploadFileName">
+				<input type="hidden" name="success_action_redirect" ng-value="responseUrl">
+				<input type="hidden" name="acl" value="public-read">
+				<input type="hidden" name="content-type" ng-value="contentType">
+				<input type="hidden" name="cache-control" value="public, max-age=60">
+				<input type="hidden" name="GoogleAccessId" ng-value="googleAccessId">
+				<input type="hidden" name="policy" ng-value="policyBase64">
+				<input type="hidden" name="signature" ng-value="signature">
+				<!-- <input type="hidden" name="file" ng-value="fileContent"> -->
+				<input type="file" name="file" id="file" multiple="multiple" onchange="angular.element(this).scope().filesSelected(this)"/>
+			</form>
+			<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
+		</div>
 	</div>
 <!--
 			<div>
@@ -91,19 +107,3 @@
 		-->
 <!--Body content-->
 <div ng-include="'partials/file-items.html'" ng-controller="FileListCtrl"></div>
-
-<div class="modal fade" tabindex="-1" ng-controller="UploadController">
-	<form id="uploadform" target="uploadcompleteframe" action="" enctype="multipart/form-data" method="post">
-		<input type="hidden" name="key" ng-value="uploadFileName">
-		<input type="hidden" name="success_action_redirect" ng-value="responseUrl">
-		<input type="hidden" name="acl" value="public-read">
-		<input type="hidden" name="content-type" ng-value="contentType">
-		<input type="hidden" name="cache-control" value="public, max-age=60">
-		<input type="hidden" name="GoogleAccessId" ng-value="googleAccessId">
-		<input type="hidden" name="policy" ng-value="policyBase64">
-		<input type="hidden" name="signature" ng-value="signature">
-		<!-- <input type="hidden" name="file" ng-value="fileContent"> -->
-		<input type="file" name="file" id="file" multiple="multiple" onchange="angular.element(this).scope().filesSelected(this)"/>
-	</form>
-	<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
-</div>
