--- a/war/partials/main.html
+++ b/war/partials/main.html
@@ -93,7 +93,7 @@
 				<!-- <input type="hidden" name="file" ng-value="fileContent"> -->
 				<input type="file" name="file" id="file" multiple="multiple" onchange="angular.element(this).scope().filesSelected(this)"/>
 			</form>
-			<iframe id="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
+			<iframe id="uploadcompleteframe" name="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
 		</div>
 	</div>
 <!--
