Remove the thumbnail / list view switcher

--- a/war/partials/main.html
+++ b/war/partials/main.html
@@ -30,9 +30,9 @@
 				</span>
 			</div>
 		</div>
-		<div class="col-xs-4 col-sm-3 col-md-2 text-right" ng-controller="ViewController">
+		<!-- <div class="col-xs-4 col-sm-3 col-md-2 text-right" ng-controller="ViewController">
 			<input id="view-toggle" type="checkbox" data-text-label="<i class='fa fa-th-large'></i>" data-on-label="<i class='fa fa-th-list'></i>" data-off-label="<i class='fa fa-th-large'></i>" data-animated="false" data-on="primary" data-off="primary" checked>
-		</div>
+                </div> -->
 	</div>
 	<div class="row commands">
 		<div id="buttons-action" class="col-sm-7" ng-controller="ButtonsController">
