Remove multiple selection option in upload dialog

--- a/war/partials/main.html
+++ b/war/partials/main.html
@@ -91,7 +91,7 @@
 				<input type="hidden" name="policy" ng-value="policyBase64">
 				<input type="hidden" name="signature" ng-value="signature">
 				<!-- <input type="hidden" name="file" ng-value="fileContent"> -->
-				<input type="file" name="file" id="file" multiple="multiple" onchange="angular.element(this).scope().filesSelected(this)"/>
+				<input type="file" name="file" id="file" onchange="angular.element(this).scope().filesSelected(this)"/>
 			</form>
 			<iframe id="uploadcompleteframe" name="uploadcompleteframe" style="position:absolute;left:0px;top:0px;width:0px;height:0px;visibility:hidden;"></iframe>
 		</div>
