--- a/web/css/media-library.css
+++ b/web/css/media-library.css
@@ -1,4 +1,4 @@
-@import "//s3.amazonaws.com/rise-common-test/styles/rise/css/rise.min.css";
+@import url("//s3.amazonaws.com/rise-common-test/styles/rise/css/rise.min.css");
 /* ==========================================================================
    General Styles
    ========================================================================== */
@@ -26,7 +26,7 @@ ul {
     /* Display & Box Model */
     display: block;
     padding: 3px 10px;
-    border: 1px solid white;
+    border: 1px solid #fff;
     /* Visual */
     font-size: 23px;
     border-radius: 0;
@@ -74,8 +74,7 @@ ul {
     text-overflow: ellipsis;
     overflow: hidden; }
 
-.thumbnail:hover,
-.thumbnail.active {
+.thumbnail:hover, .thumbnail.active {
   background-color: #f5f5f5; }
 
 .thumbnail.active:hover {
@@ -91,25 +90,22 @@ ul {
     /* Positioning */
     float: left;
     /* Display & Box Model */
-    width: 33.33333333333333%;
+    width: 33.33333%;
     padding-left: 5px;
     padding-right: 5px; }
-
   .thumbnail:nth-child(3n+1) {
     clear: left; } }
+
 /**
  * Six-column layout at desktop resolutions.
  */
 @media (min-width: 992px) {
   .thumbnail {
-    width: 16.66666666666667%; }
-
+    width: 16.66667%; }
   .thumbnail:nth-child(3n+1) {
     clear: none; }
-
   .thumbnail:nth-child(6n) {
     padding-right: 0; }
-
   .thumbnail:nth-child(6n+1) {
     /* Positioning */
     clear: left;
