File list refactoring & unit tests
- Jshint definition
- Refactor of file list logic and repackage into file list service
- File List Unit Tests

--- a/web/partials/main.html
+++ b/web/partials/main.html
@@ -106,4 +106,4 @@
 			</div>
 		-->
 <!--Body content-->
-<div ng-include="'partials/file-items.html'" ng-controller="FileListCtrl"></div>
+<div ng-include="'partials/file-items.html'"></div>
