File List E2E Example
- Add Protractor E2E configuration
- E2E scenario case for file listing
- Mock gapi backend for E2E testing
- Update README file on CI, Rundeck & Testing info

--- a/web/partials/main.html
+++ b/web/partials/main.html
@@ -74,7 +74,7 @@
 			</ul>
 		</div>
 		<div class="col-sm-5 storage">
-			<div>Storage Used: {{librarySize | fileSizeFilter}} <!-- / Bandwidth Used: N/A --></div>
+			<div class="storage-used-info">Storage Used: {{librarySize | fileSizeFilter}} <!-- / Bandwidth Used: N/A --></div>
 		</div>
 	</div>
 	<div class="row" ng-controller="UploadController">
