Add new folder button

--- a/web/partials/main.html
+++ b/web/partials/main.html
@@ -54,6 +54,11 @@
 						<i class="glyphicons cloud-download"></i>
 					</button>
 				</li>
+				<li>
+					<button class="btn" type="button" title="New Folder" ng-click="newFolderButtonClick()" ng-disabled="actionsDisabled">
+						<i class="glyphicons folder_new"></i>
+					</button>
+				</li>
 <!--
  					<li>
  						<button class="btn" type="button" title="Link" disabled>
