--- a/web/partials/main.html
+++ b/web/partials/main.html
@@ -55,7 +55,7 @@
 					</button>
 				</li>
 				<li>
-					<button class="btn" type="button" title="New Folder" ng-click="newFolderButtonClick()" ng-disabled="actionsDisabled">
+					<button class="btn" type="button" title="New Folder" ng-click="newFolderButtonClick()" ng-disabled="actionsDisabled || newFolderDisabled">
 						<i class="glyphicons folder_new"></i>
 					</button>
 				</li>
