--- a/web/partials/main.html
+++ b/web/partials/main.html
@@ -45,7 +45,7 @@
  					</li>
 -->
 				<li>
-					<button class="btn" type="button" title="Upload" ng-click="uploadButtonClick()" ng-disabled="actionsDisabled">
+					<button class="btn" type="button" title="Upload" ng-click="uploadButtonClick()" ng-disabled="actionsDisabled || uploadDisabled">
 						<i class="glyphicons cloud-upload"></i>
 					</button>
 				</li>
